<?xml version="1.0" encoding="utf-8"?>
<!--
    ConstraintLayout is a flexible layout that allows you to position
    widgets (UI elements) relative to each other or the parent layout.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- TextView to display a title for the section -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_text"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"/>

        <!-- Button to Enable Bluetooth -->
        <Button
            android:id="@+id/btnBluetoothOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_bluetooth_on"
            android:layout_marginBottom="10dp"/>

        <!-- Button to Disable Bluetooth -->
        <Button
            android:id="@+id/btnBluetoothOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_bluetooth_off"
            android:layout_marginBottom="20dp"/>

        <!-- Button to Enable Wi-Fi -->
        <Button
            android:id="@+id/btnWifiOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_wifi_on"
            android:layout_marginBottom="10dp"/>

        <!-- Button to Disable Wi-Fi -->
        <Button
            android:id="@+id/btnWifiOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_wifi_off"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>